Removed java 25 api call